--- a/index.html
+++ b/index.html
@@ -3,6 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <link rel="stylesheet" href="styles/style.css">
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-EVSTQN3/azprG1Anm3QDgpJLIm9Nao0Yz1ztcQTwFspd3yD65VohhpuuCOmLASjC" crossorigin="anonymous">
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/js/bootstrap.bundle.min.js" integrity="sha384-MrcW6ZMFYlzcLA8Nl+NtUVF0sA7MsXsP1UyJoMp4YLEuNSfAP+JcXn/tWtIaxVXM" crossorigin="anonymous"></script>
     <link rel="preconnect" href="https://fonts.googleapis.com">
@@ -12,6 +13,17 @@
     <title>Document</title>
 </head>
 <body>
+    <div class="hero">
+        <p>Hello, I am</p>
+        <h1>Fionnuala Wilson</h1>
+        <h2 class="mb-5">Junior Front-end developer based in London</h2>
+        <div>
+        <a href="" class="btn btn-branding mb-4">Contact me</a>
+        </div> 
+        <div>
+        <a href="" class="arrow-down"><i class="fas fa-angle-double-down"></i></a>
+    </div>
+    </div>
     
 </body>
 </html>
