--- a/index.html
+++ b/index.html
@@ -24,6 +24,43 @@
         <a href="" class="arrow-down"><i class="fas fa-angle-double-down"></i></a>
     </div>
     </div>
-    
+    <p class="text-center m-5">Take a look at what I have been working on...</p>
+    <div class="container hero-content">
+        <div class="row">
+            <div class="col d-none d-lg-block">
+                <img src="Media/js-weather-app.png" class="img-fluid" alt="">
+            </div>
+            <div class="col">
+                <div class="project-description">
+    <h2 class="mb-5">JS Weather App</h2>
+    <p class="text-muted mb-5">Far far away, behind the word mountains, far from the countries Vokalia and Consonantia, there live the blind texts. Separated they live in Bookmarksgrove right at the coast of the Semantics, a large language ocean. A small river named Duden flows by</p>
+    <a href="" class="btn btn-branding-outline mb-5">Learn More</a>
+</div>
+</div>
+<div class="row">
+    <div class="col">
+        <div class="project-description">
+<h2 class="mb-5">React Weather App</h2>
+<p class="text-muted mb-5">Far far away, behind the word mountains, far from the countries Vokalia and Consonantia, there live the blind texts. Separated they live in Bookmarksgrove right at the coast of the Semantics, a large language ocean. A small river named Duden flows by</p>
+<a href="" class="btn btn-branding-outline mb-5">Learn More</a>
+</div>
+</div>
+<div class="col d-none d-lg-block">
+    <img src="Media/react-weather-app.png" class="img-fluid" alt="">
+</div>
+</div>
+<div class="row">
+    <div class="col d-none d-lg-block">
+        <img src="Media/react-dictionary-app.png" class="img-fluid" alt="">
+    </div>
+    <div class="col">
+        <div class="project-description">
+<h2 class="mb-5">React Dictionary App</h2>
+<p class="text-muted mb-5">Far far away, behind the word mountains, far from the countries Vokalia and Consonantia, there live the blind texts. Separated they live in Bookmarksgrove right at the coast of the Semantics, a large language ocean. A small river named Duden flows by</p>
+<a href="" class="btn btn-branding-outline mb-5">Learn More</a>
+</div>
+</div>
+</div>
+</div>
 </body>
 </html>
