--- a/index.html
+++ b/index.html
@@ -13,6 +13,30 @@
     <title>Document</title>
 </head>
 <body>
+    <nav class="navbar navbar-expand-lg navbar-light fixed-top shadow">
+        <div class="mb-2 container-fluid">
+          <a class="navbar-brand" href="#">?</a>
+          <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarNav" aria-controls="navbarNav" aria-expanded="false" aria-label="Toggle navigation">
+            <span class="navbar-toggler-icon"></span>
+          </button>
+          <div class="collapse navbar-collapse" id="navbarNav">
+            <ul class="navbar-nav ms-auto">
+              <li class="nav-item px-4">
+                <a class="nav-link active" aria-current="page" href="/">Home</a>
+              </li>
+              <li class="nav-item px-4">
+                <a class="nav-link" href="/about.html">About</a>
+              </li>
+              <li class="nav-item px-4">
+                <a class="nav-link" href="/projects.html">Projects</a>
+              </li>
+              <li class="nav-item px-4">
+                <a class="nav-link" href="/contact.html">Contact</a>
+              </li>
+            </ul>
+          </div>
+        </div>
+      </nav>
     <div class="hero">
         <p>Hello, I am</p>
         <h1>Fionnuala Wilson</h1>
