--- a/index.html
+++ b/index.html
@@ -13,6 +13,7 @@
     <title>Document</title>
 </head>
 <body>
+    <div class="content-wrapper">
     <nav class="navbar navbar-expand-lg navbar-light fixed-top shadow">
         <div class="mb-2 container-fluid">
           <a class="navbar-brand" href="#">?</a>
@@ -85,6 +86,15 @@
 </div>
 </div>
 </div>
+</div>
+<footer class="mt-5">
+    <div class="social-links d-flex justify-content-center">
+        <a href="mailto:fionnuala.wilson@btinternet.com" target="_blank"><i class="fas fa-envelope"></i></a>
+        <a href="https://www.linkedin.com/in/fionnuala-wilson-396995133/" target="_blank"><i class="fab fa-linkedin"></i></a>
+        <a href="https://github.com/Fionnuala12" target="_blank"> <i class="fab fa-github"></i></a>
+ </div>
+ <p class="footer-text text-center text-muted mt-3 mb-0">2021 Fionnuala Wilson | <a href="">Open-source code </a></p>
+ </footer>
 </div>
 </body>
 </html>
