--- a/about.html
+++ b/about.html
@@ -3,9 +3,81 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <link rel="stylesheet" href="styles/style.css">
+    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-EVSTQN3/azprG1Anm3QDgpJLIm9Nao0Yz1ztcQTwFspd3yD65VohhpuuCOmLASjC" crossorigin="anonymous">
+    <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/js/bootstrap.bundle.min.js" integrity="sha384-MrcW6ZMFYlzcLA8Nl+NtUVF0sA7MsXsP1UyJoMp4YLEuNSfAP+JcXn/tWtIaxVXM" crossorigin="anonymous"></script>
+    <link rel="preconnect" href="https://fonts.googleapis.com">
+<link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+<link href="https://fonts.googleapis.com/css2?family=Playfair+Display&family=Poppins&display=swap" rel="stylesheet">
+<script src="https://kit.fontawesome.com/911824e75d.js" crossorigin="anonymous"></script>
     <title>Document</title>
 </head>
 <body>
-    
+    <nav class="navbar navbar-expand-lg navbar-light fixed-top shadow">
+        <div class="mb-2 container-fluid">
+          <a class="navbar-brand" href="#">?</a>
+          <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarNav" aria-controls="navbarNav" aria-expanded="false" aria-label="Toggle navigation">
+            <span class="navbar-toggler-icon"></span>
+          </button>
+          <div class="collapse navbar-collapse" id="navbarNav">
+            <ul class="navbar-nav ms-auto">
+              <li class="nav-item px-4">
+                <a class="nav-link active" aria-current="page" href="/">Home</a>
+              </li>
+              <li class="nav-item px-4">
+                <a class="nav-link" href="/about.html">About</a>
+              </li>
+              <li class="nav-item px-4">
+                <a class="nav-link" href="/projects.html">Projects</a>
+              </li>
+              <li class="nav-item px-4">
+                <a class="nav-link" href="/contact.html">Contact</a>
+              </li>
+            </ul>
+          </div>
+        </div>
+      </nav>
+      <div class="content-container container">
+          <div class="row">
+              <div class="col-md-6">
+                  <div class="content-section">
+      <h1 class="mb-4">Hi, I'm Fionnuala Wilson</h1>
+      <h2 class="mb-4">A Junior Front-end Developer, based in London</h2>
+      <p>For anyone who wants to start learning code, this workshop is very interesting. You will be challenged  with different exercises, and everything is well explained, homework and deadlines are good for keep focus</p>
+      <div class= "mt-5 md-5 project-buttons">
+      <a href="/projects.html" class="btn btn-branding">See my projects</a>
+      <a href="/contact.html" class="btn btn-branding-outline">Contact me</a>
+    </div>
+</div>
+    </div>
+    <div class="col-md-6">
+      <img src="Media/about-photo.jpeg" alt="" class="img-fluid">
+    </div>
+</div>
+<hr class="mt-5 project-division">
+<h2 class="text-center mb-5"> Certifications </h2>
+<div class="container">
+    <div class="row">
+        <div class="col-sm-3">
+            <a href="https://www.shecodes.io/certificates/6c84d6f9767994bd93ba8645abd0d2b7"><img src="Media/shecodes-basic.png" alt="" class="img-fluid"></a>
+        </div>
+<div class="col-sm-3">
+    <a href="https://www.shecodes.io/certificates/42b5fc3c4e39811d8d5013725c7c5f44"><img src="Media/shecodes-plus.png" alt="" class="img-fluid"></a>
+</div>
+<div class="col-sm-3">
+    <a href="https://www.shecodes.io/certificates/a3c6c01cb6941f89e862050a29b67026"><img src="Media/shecodes-react.png" alt="" class="img-fluid"></a>
+
+</div>
+    </div>
+</div>
+</div>
+<footer class="mt-5">
+    <div class="social-links d-flex justify-content-center">
+        <a href="mailto:fionnuala.wilson@btinternet.com" target="_blank"><i class="fas fa-envelope"></i></a>
+        <a href="https://www.linkedin.com/in/fionnuala-wilson-396995133/" target="_blank"><i class="fab fa-linkedin"></i></a>
+        <a href="https://github.com/Fionnuala12" target="_blank"> <i class="fab fa-github"></i></a>
+ </div>
+ <p class="footer-text text-center text-muted mt-3 mb-0">2021 Fionnuala Wilson | <a href="">Open-source code </a></p>
+ </footer>
 </body>
 </html>
