--- a/projects.html
+++ b/projects.html
@@ -4,9 +4,73 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <link rel="stylesheet" href="styles/style.css">
+    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-EVSTQN3/azprG1Anm3QDgpJLIm9Nao0Yz1ztcQTwFspd3yD65VohhpuuCOmLASjC" crossorigin="anonymous">
+    <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/js/bootstrap.bundle.min.js" integrity="sha384-MrcW6ZMFYlzcLA8Nl+NtUVF0sA7MsXsP1UyJoMp4YLEuNSfAP+JcXn/tWtIaxVXM" crossorigin="anonymous"></script>
+    <link rel="preconnect" href="https://fonts.googleapis.com">
+<link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+<link href="https://fonts.googleapis.com/css2?family=Playfair+Display&family=Poppins&display=swap" rel="stylesheet">
+<script src="https://kit.fontawesome.com/911824e75d.js" crossorigin="anonymous"></script>
     <title>Document</title>
 </head>
 <body>
+    <nav class="navbar navbar-expand-lg navbar-light fixed-top shadow">
+        <div class="mb-2 container-fluid">
+          <a class="navbar-brand" href="#">?</a>
+          <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarNav" aria-controls="navbarNav" aria-expanded="false" aria-label="Toggle navigation">
+            <span class="navbar-toggler-icon"></span>
+          </button>
+          <div class="collapse navbar-collapse" id="navbarNav">
+            <ul class="navbar-nav ms-auto">
+              <li class="nav-item px-4">
+                <a class="nav-link active" aria-current="page" href="/">Home</a>
+              </li>
+              <li class="nav-item px-4">
+                <a class="nav-link" href="/about.html">About</a>
+              </li>
+              <li class="nav-item px-4">
+                <a class="nav-link" href="/projects.html">Projects</a>
+              </li>
+              <li class="nav-item px-4">
+                <a class="nav-link" href="/contact.html">Contact</a>
+              </li>
+            </ul>
+          </div>
+        </div>
+      </nav>
+      <div class="content-container container">
+          <div class="content">
+              <h1 class="mb-4">My Projects</h1>
+              <div class="row">
+                  <div class="col-6">
+                      <h3>React Dictionary App</h3>
+                      <img src="Media/react-dictionary-app.png" alt="">
+                      <a href="" class="btn btn-branding">View Project</a>
+                      <a href="" class="btn btn-branding-outline">View Code</a>
+                  </div>
+                  <div class="col-6">
+                      <h3>React Weather App</h3>
+                      <img src="Media/react-weather-app.png" alt="">
+                      <a href="">View Project</a>
+                      <a href="">View Code</a>
+                  </div>
+              </div>
+<div class="row">
+    <div class="col-6">
+        <h3>JS Weather App</h3>
+        <img src="Media/js-weather-app.png" alt="">
+        <a href="">View Project</a>
+        <a href="">View Code</a>
+    </div>
+    <div class="col-6">
+        <h3>Responsive Portfolio</h3>
+        <img src="Media/js-weather-app.png" alt="">
+        <a href="">View Project</a>
+        <a href="">View Code</a>
+    </div>
+  </div>
+ </div>
+</div>
     
 </body>
 </html>
