--- a/projects.html
+++ b/projects.html
@@ -39,38 +39,53 @@
         </div>
       </nav>
       <div class="content-container container">
-          <div class="content">
-              <h1 class="mb-4">My Projects</h1>
+          <div class="content-section">
+              <h1 class="text-center mb-5">My Projects</h1>
               <div class="row">
-                  <div class="col-6">
+                  <div class="col-md-6">
                       <h3>React Dictionary App</h3>
-                      <img src="Media/react-dictionary-app.png" alt="">
-                      <a href="" class="btn btn-branding">View Project</a>
-                      <a href="" class="btn btn-branding-outline">View Code</a>
+                      <img src="Media/react-dictionary-app.png" alt="" class="img-fluid mb-5 rounded mx-auto d-block dictionary-img">
+                      <div class="d-flex justify-content-evenly mb-4 project-buttons-dictionary">
+                        <a href="" class="btn btn-branding">View Project</a>
+                        <a href="" class="btn btn-branding-outline">View Code</a>
+                      </div>
                   </div>
-                  <div class="col-6">
+                  <div class="col-md-6">
                       <h3>React Weather App</h3>
-                      <img src="Media/react-weather-app.png" alt="">
-                      <a href="">View Project</a>
-                      <a href="">View Code</a>
+                      <img src="Media/react-weather-app.png" alt=""  class="img-fluid rounded mx-auto d-block mb-4">
+                      <div class="d-flex justify-content-evenly mb-5 project-buttons">
+                        <a href="" class="btn btn-branding">View Project</a>
+                        <a href="" class="btn btn-branding-outline">View Code</a>
+                      </div>
                   </div>
               </div>
 <div class="row">
-    <div class="col-6">
-        <h3>JS Weather App</h3>
-        <img src="Media/js-weather-app.png" alt="">
-        <a href="">View Project</a>
-        <a href="">View Code</a>
+    <div class="col-md-6">
+        <h3 class="mt-4">JS Weather App</h3>
+        <img src="Media/js-weather-app.png" alt=""  class="img-fluid rounded mx-auto d-block mb-4">
+        <div class="d-flex justify-content-evenly project-buttons">
+        <a href="" class="btn btn-branding">View Project</a>
+        <a href="" class="btn btn-branding-outline">View Code</a>
+      </div>
     </div>
-    <div class="col-6">
-        <h3>Responsive Portfolio</h3>
-        <img src="Media/js-weather-app.png" alt="">
-        <a href="">View Project</a>
-        <a href="">View Code</a>
+    <div class="col-md-6">
+        <h3 class="mt-4">Responsive Portfolio</h3>
+        <img src="Media/js-weather-app.png" alt=""  class="img-fluid rounded mx-auto d-block mb-4">
+        <div class="d-flex justify-content-evenly mb-4 project-buttons">
+          <a href="" class="btn btn-branding">View Project</a>
+          <a href="" class="btn btn-branding-outline">View Code</a>
+        </div>
     </div>
   </div>
  </div>
 </div>
-    
+<footer class="mt-5">
+  <div class="social-links d-flex justify-content-center">
+      <a href="mailto:fionnuala.wilson@btinternet.com" target="_blank"><i class="fas fa-envelope"></i></a>
+      <a href="https://www.linkedin.com/in/fionnuala-wilson-396995133/" target="_blank"><i class="fab fa-linkedin"></i></a>
+      <a href="https://github.com/Fionnuala12" target="_blank"> <i class="fab fa-github"></i></a>
+</div>
+<p class="footer-text text-center text-muted mt-3 mb-0">2021 Fionnuala Wilson | <a href="">Open-source code </a></p>
+</footer>
 </body>
 </html>
