Contact page created and tools section added

--- a/about.html
+++ b/about.html
@@ -51,7 +51,7 @@
 </div>
     </div>
     <div class="col-md-6">
-      <img src="Media/about-photo.jpeg" alt="" class="img-fluid">
+      <img src="Media/about-photo.jpeg" alt="" class="img-fluid about-photo">
     </div>
 </div>
 <hr class="mt-5 project-division">
