--- a/contact.html
+++ b/contact.html
@@ -37,5 +37,45 @@
           </div>
         </div>
       </nav>
+      <div class="content-container container">
+      
+          <h1 class="text-center mb-5">Contact Me</h1>
+          <div class="row">
+            <div class="col-6">
+              <h2 class="contact-title">Lets get in touch!</h2>
+            </div>
+            <div class="col-6 mt-4">
+              <h3>
+                <i class="fas fa-envelope"></i>
+                Email
+              </h3>
+              <p>
+                <a href="mailto:fionnuala.wilson@btinternet.com" target="_blank" class="contact-link">fionnuala.wilson@btinternet.com</a>
+              </p>
+              <h3>
+                <i class="fab fa-linkedin"></i>
+                LinkedIn
+              </h3>
+              <p>
+                <a href="https://www.linkedin.com/in/fionnuala-wilson-396995133/" target="_blank" class="contact-link">https://www.linkedin.com/in/fionnuala-wilson-396995133/</a>
+              </p>
+              <h3>
+                <i class="fab fa-github"></i>
+                GitHub
+              </h3>
+              <p>
+                <a href="https://github.com/Fionnuala12" target="_blank" class="contact-link">https://github.com/Fionnuala12</a>
+              </p>
+            </div>
+            </div>
+            </div>
+            <footer class="mt-5">
+            <div class="social-links d-flex justify-content-center">
+                <a href="mailto:fionnuala.wilson@btinternet.com" target="_blank"><i class="fas fa-envelope"></i></a>
+                <a href="https://www.linkedin.com/in/fionnuala-wilson-396995133/" target="_blank"><i class="fab fa-linkedin"></i></a>
+                <a href="https://github.com/Fionnuala12" target="_blank"> <i class="fab fa-github"></i></a>
+          </div>
+          <p class="footer-text text-center text-muted mt-3 mb-0">2021 Fionnuala Wilson | <a href="">Open-source code </a></p>
+          </footer>
 </body>
 </html>
