--- a/projects.html
+++ b/projects.html
@@ -77,6 +77,70 @@
         </div>
     </div>
   </div>
+  <hr class="mt-5 project-division">
+  <div class="mt-4 text-center tools-section">
+    <h3 class="mb-5">Tools</h3>
+    <div class="container">
+      <div class="row">
+        <div class="col-lg-6">
+          <div class="row tools-row">
+            <div class="col-2">
+  <img src="Media/HTML.png" alt="" class="img-fluid logo">
+  <span>HTML</span>
+</div>
+<div class="col-2">
+  <img src="Media/CSS.png" alt="" class="img-fluid logo">
+  <span>CSS</span>
+</div>
+<div class="col-2">
+  <img src="Media/JS.png" alt="" class="img-fluid logo">
+  <span>JS</span>
+</div>
+<div class="col-2">
+  <img src="Media/vscode.png" alt="" class="img-fluid logo">
+  <span>Editor</span>
+</div>
+<div class="col-2">
+  <img src="Media/react.png" alt="" class="img-fluid logo">
+  <span>React</span>
+</div>
+<div class="col-2">
+  <img src="Media/API.png" alt="" class="img-fluid logo">
+  <span>API</span>
+</div>
+</div>
+</div>
+<div class="col-lg-6">
+  <div class="row tools-row">
+    <div class="col-2">
+      <img src="Media/github.png" alt="" class="img-fluid logo">
+      <span>GitHub</span>
+    </div>
+    <div class="col-2">
+      <img src="Media/bootstrap.png" alt="" class="img-fluid logo">
+      <span>Bootstrap</span>
+    </div>
+    <div class="col-2">
+      <img src="Media/hosting.png" alt="" class="img-fluid logo">
+      <span>Hosting</span>
+    </div>
+    <div class="col-2">
+      <img src="Media/flexbox.png" alt="" class="img-fluid logo">
+      <span>Flexbox</span>
+    </div>
+    <div class="col-2">
+      <img src="Media/seo.png" alt="" class="img-fluid logo">
+      <span>SEO</span>
+    </div>
+    <div class="col-2">
+      <img src="Media/responsive.png" alt="" class="img-fluid logo">
+      <span>Responsive</span>
+    </div>
+  </div>
+</div>
+</div>
+</div>
+</div>
  </div>
 </div>
 <footer class="mt-5">
