--- a/contact.html
+++ b/contact.html
@@ -41,8 +41,8 @@
       
           <h1 class="text-center mb-5">Contact Me</h1>
           <div class="row">
-            <div class="col-6">
-              <h2 class="contact-title">Lets get in touch!</h2>
+            <div class="col-6 contact-title">
+              <h2 class="line-1 anim-typewriter">Lets get in touch!</h2>
             </div>
             <div class="col-6 mt-4">
               <h3>
