--- a/index.html
+++ b/index.html
@@ -40,33 +40,37 @@
       </nav>
     <div class="hero">
         <p>Hello, I am</p>
-        <h1>Fionnuala Wilson</h1>
+        <h1 class="line-1 anim-typewriter">Fionnuala Wilson</h1>
         <h2 class="mb-5">Junior Front-end developer based in London</h2>
         <div>
-        <a href="" class="btn btn-branding mb-4">Contact me</a>
+        <a href="/contact.html" class="btn btn-branding mb-4">Contact me</a>
         </div> 
         <div>
-        <a href="" class="arrow-down"><i class="fas fa-angle-double-down"></i></a>
+        <a href="/#hero-content-heading" class="arrow-down"><i class="fas fa-angle-double-down"></i></a>
     </div>
     </div>
-    <p class="text-center m-5">Take a look at what I have been working on...</p>
+    <h3 class="text-center m-5" id="hero-content-heading">Take a look at what I have been working on...</h3>
     <div class="container hero-content">
         <div class="row">
             <div class="col d-none d-lg-block">
                 <img src="Media/js-weather-app.png" class="img-fluid" alt="">
             </div>
-            <div class="col">
+            <div class="col mt-5 mb-4">
                 <div class="project-description">
     <h2 class="mb-5">JS Weather App</h2>
-    <p class="text-muted mb-5">Far far away, behind the word mountains, far from the countries Vokalia and Consonantia, there live the blind texts. Separated they live in Bookmarksgrove right at the coast of the Semantics, a large language ocean. A small river named Duden flows by</p>
+    <p class="text-muted mb-5">An interactive weather app I created as my final project for SheCodes Plus. Using OpenWeatherMap API, this weather app provides real-time data for weather conditions of cities around the world. Users are also able to obtain weather data for their current location, as well as choose to view the weather temperature in either °C or °F.
+<br>
+      Built with JavaScript, HTML, CSS and Bootstrap</p>
     <a href="" class="btn btn-branding-outline mb-5">Learn More</a>
 </div>
 </div>
 <div class="row">
-    <div class="col">
+    <div class="col mt-5 mb-4">
         <div class="project-description">
 <h2 class="mb-5">React Weather App</h2>
-<p class="text-muted mb-5">Far far away, behind the word mountains, far from the countries Vokalia and Consonantia, there live the blind texts. Separated they live in Bookmarksgrove right at the coast of the Semantics, a large language ocean. A small river named Duden flows by</p>
+<p class="text-muted mb-5">Another final project for SheCodes React - I recreated this app based off the original Weather App using React components.
+<br>
+  Built with React, HTML, CSS and Bootstrapy</p>
 <a href="" class="btn btn-branding-outline mb-5">Learn More</a>
 </div>
 </div>
@@ -78,10 +82,11 @@
     <div class="col d-none d-lg-block">
         <img src="Media/react-dictionary-app.png" class="img-fluid" alt="">
     </div>
-    <div class="col">
+    <div class="col mt-5 mb-4">
         <div class="project-description">
 <h2 class="mb-5">React Dictionary App</h2>
-<p class="text-muted mb-5">Far far away, behind the word mountains, far from the countries Vokalia and Consonantia, there live the blind texts. Separated they live in Bookmarksgrove right at the coast of the Semantics, a large language ocean. A small river named Duden flows by</p>
+<p class="text-muted mb-5">One of my final projects for SheCodes React. This dictionary app uses two APIs - Dictionary and Pexels to populate data, as well as images every time a word is entered in the search bar. It also has an audio function to provide the pronunciation of the results.
+  <br>Built with React, HTML, CSS and Bootstrap</p>
 <a href="" class="btn btn-branding-outline mb-5">Learn More</a>
 </div>
 </div>
