--- a/contact.html
+++ b/contact.html
@@ -15,7 +15,7 @@
 <body>
     <nav class="navbar navbar-expand-lg navbar-light fixed-top shadow">
         <div class="mb-2 container-fluid">
-          <a class="navbar-brand" href="#">?</a>
+          <a class="navbar-brand" href="/">FW</a>
           <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarNav" aria-controls="navbarNav" aria-expanded="false" aria-label="Toggle navigation">
             <span class="navbar-toggler-icon"></span>
           </button>
@@ -42,7 +42,7 @@
           <h1 class="text-center mb-5">Contact Me</h1>
           <div class="row">
             <div class="col-6 contact-title">
-              <h2 class="line-1 anim-typewriter">Lets get in touch!</h2>
+              <h2 class="line-2 typing">Lets get in touch!</h2>
             </div>
             <div class="col-6 mt-4">
               <h3>
@@ -69,7 +69,7 @@
             </div>
             </div>
             </div>
-            <footer class="mt-5">
+            <footer>
             <div class="social-links d-flex justify-content-center">
                 <a href="mailto:fionnuala.wilson@btinternet.com" target="_blank"><i class="fas fa-envelope"></i></a>
                 <a href="https://www.linkedin.com/in/fionnuala-wilson-396995133/" target="_blank"><i class="fab fa-linkedin"></i></a>
