--- a/index.html
+++ b/index.html
@@ -16,7 +16,7 @@
     <div class="content-wrapper">
     <nav class="navbar navbar-expand-lg navbar-light fixed-top shadow">
         <div class="mb-2 container-fluid">
-          <a class="navbar-brand" href="#">?</a>
+          <a class="navbar-brand" href="/">FW</a>
           <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarNav" aria-controls="navbarNav" aria-expanded="false" aria-label="Toggle navigation">
             <span class="navbar-toggler-icon"></span>
           </button>
@@ -39,11 +39,11 @@
         </div>
       </nav>
     <div class="hero">
-        <p>Hello, I am</p>
-        <h1 class="line-1 anim-typewriter">Fionnuala Wilson</h1>
+        <p class="mb-3">Hello, I am</p>
+        <h1 class="line-1 anim-typewriter mb-3">Fionnuala Wilson</h1>
         <h2 class="mb-5">Junior Front-end developer based in London</h2>
         <div>
-        <a href="/contact.html" class="btn btn-branding mb-4">Contact me</a>
+        <a href="/contact.html" class="btn btn-branding mb-5">Contact me</a>
         </div> 
         <div>
         <a href="/#hero-content-heading" class="arrow-down"><i class="fas fa-angle-double-down"></i></a>
@@ -53,7 +53,7 @@
     <div class="container hero-content">
         <div class="row">
             <div class="col d-none d-lg-block">
-                <img src="Media/js-weather-app.png" class="img-fluid" alt="">
+                <img src="Media/js-weather-app.png" class="img-fluid img-project" alt="">
             </div>
             <div class="col mt-5 mb-4">
                 <div class="project-description">
@@ -61,7 +61,7 @@
     <p class="text-muted mb-5">An interactive weather app I created as my final project for SheCodes Plus. Using OpenWeatherMap API, this weather app provides real-time data for weather conditions of cities around the world. Users are also able to obtain weather data for their current location, as well as choose to view the weather temperature in either °C or °F.
 <br>
       Built with JavaScript, HTML, CSS and Bootstrap</p>
-    <a href="" class="btn btn-branding-outline mb-5">Learn More</a>
+    <a href="/projects.html" class="btn btn-branding-outline mb-5">Learn More</a>
 </div>
 </div>
 <div class="row">
@@ -71,28 +71,28 @@
 <p class="text-muted mb-5">Another final project for SheCodes React - I recreated this app based off the original Weather App using React components.
 <br>
   Built with React, HTML, CSS and Bootstrapy</p>
-<a href="" class="btn btn-branding-outline mb-5">Learn More</a>
+<a href="/projects.html" class="btn btn-branding-outline mb-5">Learn More</a>
 </div>
 </div>
 <div class="col d-none d-lg-block">
-    <img src="Media/react-weather-app.png" class="img-fluid" alt="">
+    <img src="Media/react-weather-app.png" class="img-fluid img-project" alt="">
 </div>
 </div>
 <div class="row">
     <div class="col d-none d-lg-block">
-        <img src="Media/react-dictionary-app.png" class="img-fluid" alt="">
+        <img src="Media/react-dictionary-app.png" class="img-fluid img-project" alt="">
     </div>
     <div class="col mt-5 mb-4">
         <div class="project-description">
 <h2 class="mb-5">React Dictionary App</h2>
 <p class="text-muted mb-5">One of my final projects for SheCodes React. This dictionary app uses two APIs - Dictionary and Pexels to populate data, as well as images every time a word is entered in the search bar. It also has an audio function to provide the pronunciation of the results.
   <br>Built with React, HTML, CSS and Bootstrap</p>
-<a href="" class="btn btn-branding-outline mb-5">Learn More</a>
+<a href="/projects.html" class="btn btn-branding-outline mb-5">Learn More</a>
 </div>
 </div>
 </div>
 </div>
-<footer class="mt-5">
+<footer>
     <div class="social-links d-flex justify-content-center">
         <a href="mailto:fionnuala.wilson@btinternet.com" target="_blank"><i class="fas fa-envelope"></i></a>
         <a href="https://www.linkedin.com/in/fionnuala-wilson-396995133/" target="_blank"><i class="fab fa-linkedin"></i></a>
