--- a/about.html
+++ b/about.html
@@ -15,7 +15,7 @@
 <body>
     <nav class="navbar navbar-expand-lg navbar-light fixed-top shadow">
         <div class="mb-2 container-fluid">
-          <a class="navbar-brand" href="#">?</a>
+          <a class="navbar-brand" href="/">FW</a>
           <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarNav" aria-controls="navbarNav" aria-expanded="false" aria-label="Toggle navigation">
             <span class="navbar-toggler-icon"></span>
           </button>
@@ -41,17 +41,17 @@
           <div class="row">
               <div class="col-md-6">
                   <div class="content-section">
-      <h1 class="mb-4">Hi, I'm Fionnuala Wilson</h1>
+      <h1 class="mb-4">Hi, <br> I'm Fionnuala Wilson</h1>
       <h2 class="mb-4">A Junior Front-end Developer, based in London</h2>
-      <p>For anyone who wants to start learning code, this workshop is very interesting. You will be challenged  with different exercises, and everything is well explained, homework and deadlines are good for keep focus</p>
+      <p>Text here.... </p>
       <div class= "mt-5 md-5 project-buttons">
       <a href="/projects.html" class="btn btn-branding">See my projects</a>
       <a href="/contact.html" class="btn btn-branding-outline">Contact me</a>
     </div>
 </div>
     </div>
-    <div class="col-md-6">
-      <img src="Media/about-photo.jpeg" alt="" class="img-fluid about-photo">
+    <div class="col-md-6 px-5">
+      <img src="Media/circle-cropped.png" alt="" class="img-fluid px-4 about-photo " width="450">
     </div>
 </div>
 <hr class="mt-5 project-division">
@@ -71,7 +71,7 @@
     </div>
 </div>
 </div>
-<footer class="mt-5">
+<footer>
     <div class="social-links d-flex justify-content-center">
         <a href="mailto:fionnuala.wilson@btinternet.com" target="_blank"><i class="fas fa-envelope"></i></a>
         <a href="https://www.linkedin.com/in/fionnuala-wilson-396995133/" target="_blank"><i class="fab fa-linkedin"></i></a>
