--- a/projects.html
+++ b/projects.html
@@ -16,7 +16,7 @@
 <body>
     <nav class="navbar navbar-expand-lg navbar-light fixed-top shadow">
         <div class="mb-2 container-fluid">
-          <a class="navbar-brand" href="#">?</a>
+          <a class="navbar-brand" href="/">FW</a>
           <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarNav" aria-controls="navbarNav" aria-expanded="false" aria-label="Toggle navigation">
             <span class="navbar-toggler-icon"></span>
           </button>
@@ -46,31 +46,31 @@
                       <h3>React Dictionary App</h3>
                       <img src="Media/react-dictionary-app.png" alt="" class="img-fluid mb-5 rounded mx-auto d-block dictionary-img">
                       <div class="d-flex justify-content-evenly mb-4 project-buttons-dictionary">
-                        <a href="" class="btn btn-branding">View Project</a>
-                        <a href="" class="btn btn-branding-outline">View Code</a>
+                        <a href="https://flamboyant-kowalevski-c75554.netlify.app/" target="_blank" class="btn btn-branding">View Project</a>
+                        <a href="https://github.com/Fionnuala12/dictionary-project-react" target="_blank" class="btn btn-branding-outline">View Code</a>
                       </div>
                   </div>
                   <div class="col-md-6">
                       <h3>React Weather App</h3>
-                      <img src="Media/react-weather-app.png" alt=""  class="img-fluid rounded mx-auto d-block mb-4">
+                      <img src="Media/react-weather-app.png" alt=""  class="img-fluid rounded mx-auto d-block mb-4 img-project">
                       <div class="d-flex justify-content-evenly mb-5 project-buttons">
-                        <a href="" class="btn btn-branding">View Project</a>
-                        <a href="" class="btn btn-branding-outline">View Code</a>
+                        <a href="https://mystifying-montalcini-adf835.netlify.app/" target="_blank" class="btn btn-branding">View Project</a>
+                        <a href="https://github.com/Fionnuala12/weather-app-react" target="_blank" class="btn btn-branding-outline">View Code</a>
                       </div>
                   </div>
               </div>
 <div class="row">
     <div class="col-md-6">
         <h3 class="mt-4">JS Weather App</h3>
-        <img src="Media/js-weather-app.png" alt=""  class="img-fluid rounded mx-auto d-block mb-4">
+        <img src="Media/js-weather-app.png" alt=""  class="img-fluid rounded mx-auto d-block mb-4 img-project">
         <div class="d-flex justify-content-evenly project-buttons">
-        <a href="" class="btn btn-branding">View Project</a>
-        <a href="" class="btn btn-branding-outline">View Code</a>
+        <a href="https://epic-heisenberg-08a300.netlify.app/" target="_blank" class="btn btn-branding">View Project</a>
+        <a href="https://github.com/Fionnuala12/weather-app-final-project" target="_blank"  class="btn btn-branding-outline">View Code</a>
       </div>
     </div>
     <div class="col-md-6">
         <h3 class="mt-4">Responsive Portfolio</h3>
-        <img src="Media/js-weather-app.png" alt=""  class="img-fluid rounded mx-auto d-block mb-4">
+        <img src="Media/js-weather-app.png" alt=""  class="img-fluid rounded mx-auto d-block mb-4 img-project">
         <div class="d-flex justify-content-evenly mb-4 project-buttons">
           <a href="" class="btn btn-branding">View Project</a>
           <a href="" class="btn btn-branding-outline">View Code</a>
@@ -143,7 +143,7 @@
 </div>
  </div>
 </div>
-<footer class="mt-5">
+<footer>
   <div class="social-links d-flex justify-content-center">
       <a href="mailto:fionnuala.wilson@btinternet.com" target="_blank"><i class="fas fa-envelope"></i></a>
       <a href="https://www.linkedin.com/in/fionnuala-wilson-396995133/" target="_blank"><i class="fab fa-linkedin"></i></a>
