Link added to open-source

--- a/index.html
+++ b/index.html
@@ -98,7 +98,7 @@
         <a href="https://www.linkedin.com/in/fionnuala-wilson-396995133/" target="_blank"><i class="fab fa-linkedin"></i></a>
         <a href="https://github.com/Fionnuala12" target="_blank"> <i class="fab fa-github"></i></a>
  </div>
- <p class="footer-text text-center text-muted mt-3 mb-0">2021 Fionnuala Wilson | <a href="">Open-source code </a></p>
+ <p class="footer-text text-center text-muted mt-3 mb-0">2021 Fionnuala Wilson | <a href="https://github.com/Fionnuala12/shecodes-responsive-project-final">Open-source code </a></p>
  </footer>
 </div>
 </body>
