Added about me content & made more SEO friendly

--- a/about.html
+++ b/about.html
@@ -3,6 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <meta name="description" content="Fionnuala Wilson is a front-end developer based in London, who discovered her passion for coding during the pandemic. She is available for freelance work. See her projects and get in touch with her.">
     <link rel="stylesheet" href="styles/style.css">
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-EVSTQN3/azprG1Anm3QDgpJLIm9Nao0Yz1ztcQTwFspd3yD65VohhpuuCOmLASjC" crossorigin="anonymous">
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/js/bootstrap.bundle.min.js" integrity="sha384-MrcW6ZMFYlzcLA8Nl+NtUVF0sA7MsXsP1UyJoMp4YLEuNSfAP+JcXn/tWtIaxVXM" crossorigin="anonymous"></script>
@@ -10,28 +11,28 @@
 <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
 <link href="https://fonts.googleapis.com/css2?family=Playfair+Display&family=Poppins&display=swap" rel="stylesheet">
 <script src="https://kit.fontawesome.com/911824e75d.js" crossorigin="anonymous"></script>
-    <title>Document</title>
+    <title>About Fionnuala Wilson | Junior Front-end Developer</title>
 </head>
 <body>
     <nav class="navbar navbar-expand-lg navbar-light fixed-top shadow">
         <div class="mb-2 container-fluid">
-          <a class="navbar-brand" href="/">FW</a>
+          <a class="navbar-brand" href="/" title="Homepage">FW</a>
           <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarNav" aria-controls="navbarNav" aria-expanded="false" aria-label="Toggle navigation">
             <span class="navbar-toggler-icon"></span>
           </button>
           <div class="collapse navbar-collapse" id="navbarNav">
             <ul class="navbar-nav ms-auto">
               <li class="nav-item px-4">
-                <a class="nav-link active" aria-current="page" href="/">Home</a>
+                <a class="nav-link active" aria-current="page" href="/" title="Homepage">Home</a>
               </li>
               <li class="nav-item px-4">
-                <a class="nav-link" href="/about.html">About</a>
+                <a class="nav-link" href="/about.html" title="About page">About</a>
               </li>
               <li class="nav-item px-4">
-                <a class="nav-link" href="/projects.html">Projects</a>
+                <a class="nav-link" href="/projects.html" title="Projects page">Projects</a>
               </li>
               <li class="nav-item px-4">
-                <a class="nav-link" href="/contact.html">Contact</a>
+                <a class="nav-link" href="/contact.html" title="Contact page">Contact</a>
               </li>
             </ul>
           </div>
@@ -43,15 +44,15 @@
                   <div class="content-section">
       <h1 class="mb-4">Hi, <br> I'm Fionnuala Wilson</h1>
       <h2 class="mb-4">A Junior Front-end Developer, based in London</h2>
-      <p>Text here.... </p>
+      <p>I'm trained in HTML, CSS, JS, as well as React. I have completed all four of the SheCodes Coding Courses and are currently undertaking the Havard Coding Course - CS50, to gain more knowldge and continue my coding journey.  </p>
       <div class= "mt-5 md-5 project-buttons">
-      <a href="/projects.html" class="btn btn-branding">See my projects</a>
-      <a href="/contact.html" class="btn btn-branding-outline">Contact me</a>
+      <a href="/projects.html" class="btn btn-branding" title="Projects page">See my projects</a>
+      <a href="/contact.html" class="btn btn-branding-outline"title="Contact page">Contact me</a>
     </div>
 </div>
     </div>
     <div class="col-md-6 px-5">
-      <img src="Media/circle-cropped.png" alt="" class="img-fluid px-4 about-photo " width="450">
+      <img src="Media/circle-cropped.png" alt="headshot" class="img-fluid px-4 about-photo " width="450">
     </div>
 </div>
 <hr class="mt-5 project-division">
@@ -59,13 +60,13 @@
 <div class="container">
     <div class="row">
         <div class="col-sm-3">
-            <a href="https://www.shecodes.io/certificates/6c84d6f9767994bd93ba8645abd0d2b7"><img src="Media/shecodes-basic.png" alt="" class="img-fluid"></a>
+            <a href="https://www.shecodes.io/certificates/6c84d6f9767994bd93ba8645abd0d2b7"><img src="Media/shecodes-basic.png" alt="shecodes basic certificate" class="img-fluid"></a>
         </div>
 <div class="col-sm-3">
-    <a href="https://www.shecodes.io/certificates/42b5fc3c4e39811d8d5013725c7c5f44"><img src="Media/shecodes-plus.png" alt="" class="img-fluid"></a>
+    <a href="https://www.shecodes.io/certificates/42b5fc3c4e39811d8d5013725c7c5f44"><img src="Media/shecodes-plus.png" alt="shecodes plus certificate" class="img-fluid"></a>
 </div>
 <div class="col-sm-3">
-    <a href="https://www.shecodes.io/certificates/a3c6c01cb6941f89e862050a29b67026"><img src="Media/shecodes-react.png" alt="" class="img-fluid"></a>
+    <a href="https://www.shecodes.io/certificates/a3c6c01cb6941f89e862050a29b67026"><img src="Media/shecodes-react.png" alt="shecodes react certificate" class="img-fluid"></a>
 
 </div>
     </div>
@@ -73,9 +74,9 @@
 </div>
 <footer>
     <div class="social-links d-flex justify-content-center">
-        <a href="mailto:fionnuala.wilson@btinternet.com" target="_blank"><i class="fas fa-envelope"></i></a>
-        <a href="https://www.linkedin.com/in/fionnuala-wilson-396995133/" target="_blank"><i class="fab fa-linkedin"></i></a>
-        <a href="https://github.com/Fionnuala12" target="_blank"> <i class="fab fa-github"></i></a>
+        <a href="mailto:fionnuala.wilson@btinternet.com" target="_blank" title="Email"><i class="fas fa-envelope"></i></a>
+        <a href="https://www.linkedin.com/in/fionnuala-wilson-396995133/" target="_blank" title="LinkedIn"><i class="fab fa-linkedin"></i></a>
+        <a href="https://github.com/Fionnuala12" target="_blank" title="GitHub"> <i class="fab fa-github"></i></a>
  </div>
  <p class="footer-text text-center text-muted mt-3 mb-0">2021 Fionnuala Wilson | <a href="https://github.com/Fionnuala12/shecodes-responsive-project-final">Open-source code </a></p>
  </footer>
