--- a/projects.html
+++ b/projects.html
@@ -4,6 +4,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <meta name="description" content="Fionnuala Wilson is a front-end developer based in London, who discovered her passion for coding during the pandemic. She is available for freelance work. See her projects and get in touch with her.">
     <link rel="stylesheet" href="styles/style.css">
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-EVSTQN3/azprG1Anm3QDgpJLIm9Nao0Yz1ztcQTwFspd3yD65VohhpuuCOmLASjC" crossorigin="anonymous">
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/js/bootstrap.bundle.min.js" integrity="sha384-MrcW6ZMFYlzcLA8Nl+NtUVF0sA7MsXsP1UyJoMp4YLEuNSfAP+JcXn/tWtIaxVXM" crossorigin="anonymous"></script>
@@ -11,28 +12,28 @@
 <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
 <link href="https://fonts.googleapis.com/css2?family=Playfair+Display&family=Poppins&display=swap" rel="stylesheet">
 <script src="https://kit.fontawesome.com/911824e75d.js" crossorigin="anonymous"></script>
-    <title>Document</title>
+    <title>Fionnuala's Projects | Junior Front-end Developer</title>
 </head>
 <body>
     <nav class="navbar navbar-expand-lg navbar-light fixed-top shadow">
         <div class="mb-2 container-fluid">
-          <a class="navbar-brand" href="/">FW</a>
+          <a class="navbar-brand" href="/" title="Homepage">FW</a>
           <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarNav" aria-controls="navbarNav" aria-expanded="false" aria-label="Toggle navigation">
             <span class="navbar-toggler-icon"></span>
           </button>
           <div class="collapse navbar-collapse" id="navbarNav">
             <ul class="navbar-nav ms-auto">
               <li class="nav-item px-4">
-                <a class="nav-link active" aria-current="page" href="/">Home</a>
+                <a class="nav-link active" aria-current="page" href="/" title="Homepage">Home</a>
               </li>
               <li class="nav-item px-4">
-                <a class="nav-link" href="/about.html">About</a>
+                <a class="nav-link" href="/about.html" title="About page">About</a>
               </li>
               <li class="nav-item px-4">
-                <a class="nav-link" href="/projects.html">Projects</a>
+                <a class="nav-link" href="/projects.html" title="Projects page">Projects</a>
               </li>
               <li class="nav-item px-4">
-                <a class="nav-link" href="/contact.html">Contact</a>
+                <a class="nav-link" href="/contact.html" title="Contact page">Contact</a>
               </li>
             </ul>
           </div>
@@ -44,7 +45,7 @@
               <div class="row">
                   <div class="col-md-6">
                       <h3>React Dictionary App</h3>
-                      <img src="Media/react-dictionary-app.png" alt="" class="img-fluid mb-5 rounded mx-auto d-block dictionary-img">
+                      <img src="Media/react-dictionary-app.png" alt="React Dicitionar App" class="img-fluid mb-5 rounded mx-auto d-block dictionary-img">
                       <div class="d-flex justify-content-evenly mb-4 project-buttons-dictionary">
                         <a href="https://flamboyant-kowalevski-c75554.netlify.app/" target="_blank" class="btn btn-branding">View Project</a>
                         <a href="https://github.com/Fionnuala12/dictionary-project-react" target="_blank" class="btn btn-branding-outline">View Code</a>
@@ -52,7 +53,7 @@
                   </div>
                   <div class="col-md-6">
                       <h3>React Weather App</h3>
-                      <img src="Media/react-weather-app.png" alt=""  class="img-fluid rounded mx-auto d-block mb-4 img-project">
+                      <img src="Media/react-weather-app.png" alt="React Weather App"  class="img-fluid rounded mx-auto d-block mb-4 img-project">
                       <div class="d-flex justify-content-evenly mb-5 project-buttons">
                         <a href="https://mystifying-montalcini-adf835.netlify.app/" target="_blank" class="btn btn-branding">View Project</a>
                         <a href="https://github.com/Fionnuala12/weather-app-react" target="_blank" class="btn btn-branding-outline">View Code</a>
@@ -62,7 +63,7 @@
 <div class="row">
     <div class="col-md-6">
         <h3 class="mt-4">JS Weather App</h3>
-        <img src="Media/js-weather-app.png" alt=""  class="img-fluid rounded mx-auto d-block mb-4 img-project">
+        <img src="Media/js-weather-app.png" alt="JS Weather App"  class="img-fluid rounded mx-auto d-block mb-4 img-project">
         <div class="d-flex justify-content-evenly project-buttons">
         <a href="https://epic-heisenberg-08a300.netlify.app/" target="_blank" class="btn btn-branding">View Project</a>
         <a href="https://github.com/Fionnuala12/weather-app-final-project" target="_blank"  class="btn btn-branding-outline">View Code</a>
@@ -85,27 +86,27 @@
         <div class="col-lg-6">
           <div class="row tools-row">
             <div class="col-2">
-  <img src="Media/HTML.png" alt="" class="img-fluid logo">
+  <img src="Media/HTML.png" alt="HTML logo" class="img-fluid logo">
   <span>HTML</span>
 </div>
 <div class="col-2">
-  <img src="Media/CSS.png" alt="" class="img-fluid logo">
+  <img src="Media/CSS.png" alt="CSS logo" class="img-fluid logo">
   <span>CSS</span>
 </div>
 <div class="col-2">
-  <img src="Media/JS.png" alt="" class="img-fluid logo">
+  <img src="Media/JS.png" alt="JS logo" class="img-fluid logo">
   <span>JS</span>
 </div>
 <div class="col-2">
-  <img src="Media/vscode.png" alt="" class="img-fluid logo">
+  <img src="Media/vscode.png" alt="VSCode logo" class="img-fluid logo">
   <span>Editor</span>
 </div>
 <div class="col-2">
-  <img src="Media/react.png" alt="" class="img-fluid logo">
+  <img src="Media/react.png" alt="React logo" class="img-fluid logo">
   <span>React</span>
 </div>
 <div class="col-2">
-  <img src="Media/API.png" alt="" class="img-fluid logo">
+  <img src="Media/API.png" alt="API logo" class="img-fluid logo">
   <span>API</span>
 </div>
 </div>
@@ -113,27 +114,27 @@
 <div class="col-lg-6">
   <div class="row tools-row">
     <div class="col-2">
-      <img src="Media/github.png" alt="" class="img-fluid logo">
+      <img src="Media/github.png" alt="GitHub logo" class="img-fluid logo">
       <span>GitHub</span>
     </div>
     <div class="col-2">
-      <img src="Media/bootstrap.png" alt="" class="img-fluid logo">
+      <img src="Media/bootstrap.png" alt="Bootstrap logo" class="img-fluid logo">
       <span>Bootstrap</span>
     </div>
     <div class="col-2">
-      <img src="Media/hosting.png" alt="" class="img-fluid logo">
+      <img src="Media/hosting.png" alt="Hosting logo" class="img-fluid logo">
       <span>Hosting</span>
     </div>
     <div class="col-2">
-      <img src="Media/flexbox.png" alt="" class="img-fluid logo">
+      <img src="Media/flexbox.png" alt="Flexbox logo" class="img-fluid logo">
       <span>Flexbox</span>
     </div>
     <div class="col-2">
-      <img src="Media/seo.png" alt="" class="img-fluid logo">
+      <img src="Media/seo.png" alt="SEO logo" class="img-fluid logo">
       <span>SEO</span>
     </div>
     <div class="col-2">
-      <img src="Media/responsive.png" alt="" class="img-fluid logo">
+      <img src="Media/responsive.png" alt="Responsive logo" class="img-fluid logo">
       <span>Responsive</span>
     </div>
   </div>
@@ -145,9 +146,9 @@
 </div>
 <footer>
   <div class="social-links d-flex justify-content-center">
-      <a href="mailto:fionnuala.wilson@btinternet.com" target="_blank"><i class="fas fa-envelope"></i></a>
-      <a href="https://www.linkedin.com/in/fionnuala-wilson-396995133/" target="_blank"><i class="fab fa-linkedin"></i></a>
-      <a href="https://github.com/Fionnuala12" target="_blank"> <i class="fab fa-github"></i></a>
+      <a href="mailto:fionnuala.wilson@btinternet.com" target="_blank" title="Email"><i class="fas fa-envelope"></i></a>
+      <a href="https://www.linkedin.com/in/fionnuala-wilson-396995133/" target="_blank" title="LinkedIn"><i class="fab fa-linkedin"></i></a>
+      <a href="https://github.com/Fionnuala12" target="_blank" title="GitHub"> <i class="fab fa-github"></i></a>
 </div>
 <p class="footer-text text-center text-muted mt-3 mb-0">2021 Fionnuala Wilson | <a href="https://github.com/Fionnuala12/shecodes-responsive-project-final">Open-source code </a></p>
 </footer>
