--- a/contact.html
+++ b/contact.html
@@ -3,6 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <meta name="description" content="Fionnuala Wilson is a front-end developer based in London, who discovered her passion for coding during the pandemic. She is available for freelance work. See her projects and get in touch with her.">
     <link rel="stylesheet" href="styles/style.css">
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-EVSTQN3/azprG1Anm3QDgpJLIm9Nao0Yz1ztcQTwFspd3yD65VohhpuuCOmLASjC" crossorigin="anonymous">
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/js/bootstrap.bundle.min.js" integrity="sha384-MrcW6ZMFYlzcLA8Nl+NtUVF0sA7MsXsP1UyJoMp4YLEuNSfAP+JcXn/tWtIaxVXM" crossorigin="anonymous"></script>
@@ -10,35 +11,34 @@
 <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
 <link href="https://fonts.googleapis.com/css2?family=Playfair+Display&family=Poppins&display=swap" rel="stylesheet">
 <script src="https://kit.fontawesome.com/911824e75d.js" crossorigin="anonymous"></script>
-    <title>Document</title>
+    <title>Contact Fionnuala Wilson | Junior Front-end Developer/title>
 </head>
 <body>
     <nav class="navbar navbar-expand-lg navbar-light fixed-top shadow">
         <div class="mb-2 container-fluid">
-          <a class="navbar-brand" href="/">FW</a>
+          <a class="navbar-brand" href="/" title="Homepage">FW</a>
           <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarNav" aria-controls="navbarNav" aria-expanded="false" aria-label="Toggle navigation">
             <span class="navbar-toggler-icon"></span>
           </button>
           <div class="collapse navbar-collapse" id="navbarNav">
             <ul class="navbar-nav ms-auto">
               <li class="nav-item px-4">
-                <a class="nav-link active" aria-current="page" href="/">Home</a>
+                <a class="nav-link active" aria-current="page" href="/" title="Homepage">Home</a>
               </li>
               <li class="nav-item px-4">
-                <a class="nav-link" href="/about.html">About</a>
+                <a class="nav-link" href="/about.html" title="About page">About</a>
               </li>
               <li class="nav-item px-4">
-                <a class="nav-link" href="/projects.html">Projects</a>
+                <a class="nav-link" href="/projects.html" title="Projects page">Projects</a>
               </li>
               <li class="nav-item px-4">
-                <a class="nav-link" href="/contact.html">Contact</a>
+                <a class="nav-link" href="/contact.html" title="Contact page">Contact</a>
               </li>
             </ul>
           </div>
         </div>
       </nav>
       <div class="content-container container">
-      
           <h1 class="text-center mb-5">Contact Me</h1>
           <div class="row">
             <div class="col-6 contact-title">
@@ -50,30 +50,30 @@
                 Email
               </h3>
               <p>
-                <a href="mailto:fionnuala.wilson@btinternet.com" target="_blank" class="contact-link">fionnuala.wilson@btinternet.com</a>
+                <a href="mailto:fionnuala.wilson@btinternet.com" target="_blank" class="contact-link" title="Email">fionnuala.wilson@btinternet.com</a>
               </p>
               <h3>
                 <i class="fab fa-linkedin"></i>
                 LinkedIn
               </h3>
               <p>
-                <a href="https://www.linkedin.com/in/fionnuala-wilson-396995133/" target="_blank" class="contact-link">https://www.linkedin.com/in/fionnuala-wilson-396995133/</a>
+                <a href="https://www.linkedin.com/in/fionnuala-wilson-396995133/" target="_blank" class="contact-link" title="LinkedIn">https://www.linkedin.com/in/fionnuala-wilson-396995133/</a>
               </p>
               <h3>
                 <i class="fab fa-github"></i>
                 GitHub
               </h3>
               <p>
-                <a href="https://github.com/Fionnuala12" target="_blank" class="contact-link">https://github.com/Fionnuala12</a>
+                <a href="https://github.com/Fionnuala12" target="_blank" class="contact-link" title="GitHub">https://github.com/Fionnuala12</a>
               </p>
             </div>
             </div>
             </div>
             <footer>
             <div class="social-links d-flex justify-content-center">
-                <a href="mailto:fionnuala.wilson@btinternet.com" target="_blank"><i class="fas fa-envelope"></i></a>
-                <a href="https://www.linkedin.com/in/fionnuala-wilson-396995133/" target="_blank"><i class="fab fa-linkedin"></i></a>
-                <a href="https://github.com/Fionnuala12" target="_blank"> <i class="fab fa-github"></i></a>
+                <a href="mailto:fionnuala.wilson@btinternet.com" target="_blank" title="Email"><i class="fas fa-envelope"></i></a>
+                <a href="https://www.linkedin.com/in/fionnuala-wilson-396995133/" target="_blank" title="LinkedIn"><i class="fab fa-linkedin"></i></a>
+                <a href="https://github.com/Fionnuala12" target="_blank" title="GitHub"> <i class="fab fa-github"></i></a>
           </div>
           <p class="footer-text text-center text-muted mt-3 mb-0">2021 Fionnuala Wilson | <a href="https://github.com/Fionnuala12/shecodes-responsive-project-final">Open-source code </a></p>
           </footer>
