--- a/index.html
+++ b/index.html
@@ -3,6 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <meta name="description" content="Fionnuala Wilson is a front-end developer based in London, who discovered her passion for coding during the pandemic. She is available for freelance work. See her projects and get in touch with her.">
     <link rel="stylesheet" href="styles/style.css">
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-EVSTQN3/azprG1Anm3QDgpJLIm9Nao0Yz1ztcQTwFspd3yD65VohhpuuCOmLASjC" crossorigin="anonymous">
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/js/bootstrap.bundle.min.js" integrity="sha384-MrcW6ZMFYlzcLA8Nl+NtUVF0sA7MsXsP1UyJoMp4YLEuNSfAP+JcXn/tWtIaxVXM" crossorigin="anonymous"></script>
@@ -10,29 +11,29 @@
 <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
 <link href="https://fonts.googleapis.com/css2?family=Playfair+Display&family=Poppins&display=swap" rel="stylesheet">
 <script src="https://kit.fontawesome.com/911824e75d.js" crossorigin="anonymous"></script>
-    <title>Document</title>
+    <title>Fionnuala Wilson | Junior Front-end Developer</title>
 </head>
 <body>
     <div class="content-wrapper">
     <nav class="navbar navbar-expand-lg navbar-light fixed-top shadow">
         <div class="mb-2 container-fluid">
-          <a class="navbar-brand" href="/">FW</a>
+          <a class="navbar-brand" href="/" title="Homepage">FW</a>
           <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarNav" aria-controls="navbarNav" aria-expanded="false" aria-label="Toggle navigation">
             <span class="navbar-toggler-icon"></span>
           </button>
           <div class="collapse navbar-collapse" id="navbarNav">
             <ul class="navbar-nav ms-auto">
               <li class="nav-item px-4">
-                <a class="nav-link active" aria-current="page" href="/">Home</a>
+                <a class="nav-link active" aria-current="page" href="/" title="Homepage">Home</a>
               </li>
               <li class="nav-item px-4">
-                <a class="nav-link" href="/about.html">About</a>
+                <a class="nav-link" href="/about.html" title="About page">About</a>
               </li>
               <li class="nav-item px-4">
-                <a class="nav-link" href="/projects.html">Projects</a>
+                <a class="nav-link" href="/projects.html" title="Projects page">Projects</a>
               </li>
               <li class="nav-item px-4">
-                <a class="nav-link" href="/contact.html">Contact</a>
+                <a class="nav-link" href="/contact.html" title="Contact page">Contact</a>
               </li>
             </ul>
           </div>
@@ -43,7 +44,7 @@
         <h1 class="line-1 anim-typewriter mb-3">Fionnuala Wilson</h1>
         <h2 class="mb-5">Junior Front-end developer based in London</h2>
         <div>
-        <a href="/contact.html" class="btn btn-branding mb-5">Contact me</a>
+        <a href="/contact.html" class="btn btn-branding mb-5" title="Contact page">Contact me</a>
         </div> 
         <div>
         <a href="/#hero-content-heading" class="arrow-down"><i class="fas fa-angle-double-down"></i></a>
@@ -53,7 +54,7 @@
     <div class="container hero-content">
         <div class="row">
             <div class="col d-none d-lg-block">
-                <img src="Media/js-weather-app.png" class="img-fluid img-project" alt="">
+                <img src="Media/js-weather-app.png" class="img-fluid img-project" alt="js weather app">
             </div>
             <div class="col mt-5 mb-4">
                 <div class="project-description">
@@ -61,7 +62,7 @@
     <p class="text-muted mb-5">An interactive weather app I created as my final project for SheCodes Plus. Using OpenWeatherMap API, this weather app provides real-time data for weather conditions of cities around the world. Users are also able to obtain weather data for their current location, as well as choose to view the weather temperature in either °C or °F.
 <br>
       Built with JavaScript, HTML, CSS and Bootstrap</p>
-    <a href="/projects.html" class="btn btn-branding-outline mb-5">Learn More</a>
+    <a href="/projects.html" class="btn btn-branding-outline mb-5" title="Projects page">Learn More</a>
 </div>
 </div>
 <div class="row">
@@ -71,32 +72,32 @@
 <p class="text-muted mb-5">Another final project for SheCodes React - I recreated this app based off the original Weather App using React components.
 <br>
   Built with React, HTML, CSS and Bootstrapy</p>
-<a href="/projects.html" class="btn btn-branding-outline mb-5">Learn More</a>
+<a href="/projects.html" class="btn btn-branding-outline mb-5" title="Projects page">Learn More</a>
 </div>
 </div>
 <div class="col d-none d-lg-block">
-    <img src="Media/react-weather-app.png" class="img-fluid img-project" alt="">
+    <img src="Media/react-weather-app.png" class="img-fluid img-project" alt="react weather app">
 </div>
 </div>
 <div class="row">
     <div class="col d-none d-lg-block">
-        <img src="Media/react-dictionary-app.png" class="img-fluid img-project" alt="">
+        <img src="Media/react-dictionary-app.png" class="img-fluid img-project" alt="react dictionary app">
     </div>
     <div class="col mt-5 mb-4">
         <div class="project-description">
 <h2 class="mb-5">React Dictionary App</h2>
 <p class="text-muted mb-5">One of my final projects for SheCodes React. This dictionary app uses two APIs - Dictionary and Pexels to populate data, as well as images every time a word is entered in the search bar. It also has an audio function to provide the pronunciation of the results.
   <br>Built with React, HTML, CSS and Bootstrap</p>
-<a href="/projects.html" class="btn btn-branding-outline mb-5">Learn More</a>
+<a href="/projects.html" class="btn btn-branding-outline mb-5" title="Projects page">Learn More</a>
 </div>
 </div>
 </div>
 </div>
 <footer>
     <div class="social-links d-flex justify-content-center">
-        <a href="mailto:fionnuala.wilson@btinternet.com" target="_blank"><i class="fas fa-envelope"></i></a>
-        <a href="https://www.linkedin.com/in/fionnuala-wilson-396995133/" target="_blank"><i class="fab fa-linkedin"></i></a>
-        <a href="https://github.com/Fionnuala12" target="_blank"> <i class="fab fa-github"></i></a>
+        <a href="mailto:fionnuala.wilson@btinternet.com" target="_blank" title="Email"><i class="fas fa-envelope"></i></a>
+        <a href="https://www.linkedin.com/in/fionnuala-wilson-396995133/" target="_blank" title="LinkedIn"><i class="fab fa-linkedin"></i></a>
+        <a href="https://github.com/Fionnuala12" target="_blank" title="GitHub"> <i class="fab fa-github"></i></a>
  </div>
  <p class="footer-text text-center text-muted mt-3 mb-0">2021 Fionnuala Wilson | <a href="https://github.com/Fionnuala12/shecodes-responsive-project-final">Open-source code </a></p>
  </footer>
