Made projects page more responsive

--- a/projects.html
+++ b/projects.html
@@ -87,27 +87,27 @@
           <div class="row tools-row">
             <div class="col-2">
   <img src="Media/HTML.png" alt="HTML logo" class="img-fluid logo">
-  <span>HTML</span>
+  <span class="logo-name">HTML</span>
 </div>
 <div class="col-2">
   <img src="Media/CSS.png" alt="CSS logo" class="img-fluid logo">
-  <span>CSS</span>
+  <span class="logo-name">CSS</span>
 </div>
 <div class="col-2">
   <img src="Media/JS.png" alt="JS logo" class="img-fluid logo">
-  <span>JS</span>
+  <span class="logo-name">JS</span>
 </div>
 <div class="col-2">
   <img src="Media/vscode.png" alt="VSCode logo" class="img-fluid logo">
-  <span>Editor</span>
+  <span class="logo-name">Editor</span>
 </div>
 <div class="col-2">
   <img src="Media/react.png" alt="React logo" class="img-fluid logo">
-  <span>React</span>
+  <span class="logo-name">React</span>
 </div>
 <div class="col-2">
   <img src="Media/API.png" alt="API logo" class="img-fluid logo">
-  <span>API</span>
+  <span class="logo-name">API</span>
 </div>
 </div>
 </div>
@@ -115,27 +115,27 @@
   <div class="row tools-row">
     <div class="col-2">
       <img src="Media/github.png" alt="GitHub logo" class="img-fluid logo">
-      <span>GitHub</span>
+      <span class="logo-name">GitHub</span>
     </div>
     <div class="col-2">
       <img src="Media/bootstrap.png" alt="Bootstrap logo" class="img-fluid logo">
-      <span>Bootstrap</span>
+      <span class="logo-name">Bootstrap</span>
     </div>
     <div class="col-2">
       <img src="Media/hosting.png" alt="Hosting logo" class="img-fluid logo">
-      <span>Hosting</span>
+      <span class="logo-name">Hosting</span>
     </div>
     <div class="col-2">
       <img src="Media/flexbox.png" alt="Flexbox logo" class="img-fluid logo">
-      <span>Flexbox</span>
+      <span class="logo-name">Flexbox</span>
     </div>
     <div class="col-2">
       <img src="Media/seo.png" alt="SEO logo" class="img-fluid logo">
-      <span>SEO</span>
+      <span class="logo-name">SEO</span>
     </div>
     <div class="col-2">
       <img src="Media/responsive.png" alt="Responsive logo" class="img-fluid logo">
-      <span>Responsive</span>
+      <span class="logo-name">Responsive</span>
     </div>
   </div>
 </div>
