About page made more responsive

--- a/about.html
+++ b/about.html
@@ -45,7 +45,7 @@
       <h1 class="mb-4">Hi, <br> I'm Fionnuala Wilson</h1>
       <h2 class="mb-4">A Junior Front-end Developer, based in London</h2>
       <p>I'm trained in HTML, CSS, JS, as well as React. I have completed all four of the SheCodes Coding Courses and are currently undertaking the Havard Coding Course - CS50, to gain more knowldge and continue my coding journey.  </p>
-      <div class= "mt-5 md-5 project-buttons">
+      <div class= "mt-5 mb-5 project-buttons">
       <a href="/projects.html" class="btn btn-branding" title="Projects page">See my projects</a>
       <a href="/contact.html" class="btn btn-branding-outline"title="Contact page">Contact me</a>
     </div>
