Made contact page more responsive

--- a/contact.html
+++ b/contact.html
@@ -11,7 +11,7 @@
 <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
 <link href="https://fonts.googleapis.com/css2?family=Playfair+Display&family=Poppins&display=swap" rel="stylesheet">
 <script src="https://kit.fontawesome.com/911824e75d.js" crossorigin="anonymous"></script>
-    <title>Contact Fionnuala Wilson | Junior Front-end Developer/title>
+    <title>Contact Fionnuala Wilson | Junior Front-end Developer</title>
 </head>
 <body>
     <nav class="navbar navbar-expand-lg navbar-light fixed-top shadow">
@@ -41,10 +41,10 @@
       <div class="content-container container">
           <h1 class="text-center mb-5">Contact Me</h1>
           <div class="row">
-            <div class="col-6 contact-title">
+            <div class="col-lg-6 contact-title">
               <h2 class="line-2 typing">Lets get in touch!</h2>
             </div>
-            <div class="col-6 mt-4">
+            <div class="col-lg-6 mt-4 contact-headings">
               <h3>
                 <i class="fas fa-envelope"></i>
                 Email
