Fixed typo & dictionary image

--- a/index.html
+++ b/index.html
@@ -71,7 +71,7 @@
 <h2 class="mb-5">React Weather App</h2>
 <p class="text-muted mb-5">Another final project for SheCodes React - I recreated this app based off the original Weather App using React components.
 <br>
-  Built with React, HTML, CSS and Bootstrapy</p>
+  Built with React, HTML, CSS and Bootstrap</p>
 <a href="/projects.html" class="btn btn-branding-outline mb-5" title="Projects page">Learn More</a>
 </div>
 </div>
