CSS tidied & Responsive image added

--- a/projects.html
+++ b/projects.html
@@ -71,10 +71,9 @@
     </div>
     <div class="col-md-6">
         <h3 class="mt-4">Responsive Portfolio</h3>
-        <img src="Media/js-weather-app.png" alt=""  class="img-fluid rounded mx-auto d-block mb-4 img-project">
+        <img src="Media/responsive-website.png" alt=""  class="img-fluid rounded mx-auto d-block mb-4 responsive-img">
         <div class="d-flex justify-content-evenly mb-4 project-buttons">
-          <a href="" class="btn btn-branding">View Project</a>
-          <a href="" class="btn btn-branding-outline">View Code</a>
+          <a href="https://github.com/Fionnuala12/shecodes-responsive-project-final" class="btn btn-branding-outline">View Code</a>
         </div>
     </div>
   </div>
