Shecodes Responsive certificate added

--- a/about.html
+++ b/about.html
@@ -62,6 +62,9 @@
         <div class="col-sm-3">
             <a href="https://www.shecodes.io/certificates/6c84d6f9767994bd93ba8645abd0d2b7"><img src="Media/shecodes-basic.png" alt="shecodes basic certificate" class="img-fluid"></a>
         </div>
+        <div class="col-sm-3">
+          <a href="https://www.shecodes.io/certificates/2dd60086fa6a8c7716921c77ef2715fb"><img src="Media/shecodes-responsive.png" alt="shecodes responsive certificate" class="img-fluid"></a>
+      </div>
 <div class="col-sm-3">
     <a href="https://www.shecodes.io/certificates/42b5fc3c4e39811d8d5013725c7c5f44"><img src="Media/shecodes-plus.png" alt="shecodes plus certificate" class="img-fluid"></a>
 </div>
